--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,63 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+body{
+  font-family:Arial, Helvetica, sans-serif;
+  font-size:16px;
+}
+
+.mainWrapper{
+  width:90%;
+  margin:0 auto;
+  /*border:1px solid red;*/
+}
+.container{
+  padding:20px;
+  justify-content:center;
+  align-items:center;
+  flex-direction: column;
+}
+header{
+  text-align:center;
+  margin:0 0 40px 0;
+}
+.formWrapper{
+  max-width:550px;
+  background-color:#f5f5f5;
+  padding:50px;
+  margin:0 auto;
+  /*border:1px solid blue;*/
+
+  
+}
+label{
+  display:block;
+  margin:15px 0 5px 0;
+  font-size:14px;
+}
+input, select{
+  border:1px solid #ddd;
+  padding:10px;
+  width:94%;
+  font-size:16px;
+}
+button{
+  background-color:#000;
+  border:1px solid #666;
+  border-radius:50px;
+  padding:10px;
+  font-size:16px;
+  min-width:100px;
+  color:#fff;
+  font-weight:bold;
+  margin:30px 20px 0 0;
+}
+button:hover{
+  opacity:0.8;
+}
+
+button.submitButton{
+  background-color:green;
+  border:1px solid limegreen;
+}
+
