--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body{
   font-size:16px;
 }
 
+h2{
+  font-size:20px;
+}
+
 .mainWrapper{
   width:90%;
   margin:0 auto;
@@ -69,5 +73,11 @@ button:hover{
 button.submitButton{
   background-color:green;
   border:1px solid limegreen;
+}
+
+.confirmationPage-summary{
+  border-bottom:1px solid #ddd;
+  padding:0  0 5px 0;
+  margin:0 0 20px 0;
 }
 
