--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,15 @@ code {
 body{
   font-family:Arial, Helvetica, sans-serif;
   font-size:16px;
+  color:#fff;
+  background-image:url("./assets//Images/BG.jpeg");
+  background-size: auto;
+  background-position: top;
+  background-repeat: no-repeat;
 }
-
+h1{
+  font-size:28px;
+}
 h2{
   font-size:20px;
 }
@@ -30,14 +37,15 @@ h2{
   justify-content:center;
   align-items:center;
   flex-direction: column;
+  margin:50px 0 0 0;
 }
 header{
   text-align:center;
-  margin:0 0 40px 0;
+  margin:0 0 80px 0;
 }
 .formWrapper{
   max-width:550px;
-  background-color:#f5f5f5;
+  /*background-color:#f5f5f5;*/
   padding:50px;
   margin:0 auto;
   /*border:1px solid blue;*/
@@ -47,14 +55,19 @@ header{
 label{
   display:block;
   margin:15px 0 5px 0;
-  font-size:14px;
+  font-size:16px;
+  font-weight:bold;
 }
 input, select{
-  border:1px solid #ddd;
+  border:1px none;
   padding:10px;
   width:94%;
   font-size:16px;
+  background-color:transparent;
+  border-bottom:1px solid #ddd;
+  color:#fff;
 }
+
 button{
   background-color:#000;
   border:1px solid #666;
@@ -76,7 +89,7 @@ button.submitButton{
 }
 
 .confirmationPage-summary{
-  border-bottom:1px solid #ddd;
+  /*border-bottom:1px solid #ddd;*/
   padding:0  0 5px 0;
   margin:0 0 20px 0;
 }
