--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,13 @@ button.submitButton{
 }
 
 .confirmationPage-summary{
-  /*border-bottom:1px solid #ddd;*/
   padding:0  0 5px 0;
   margin:0 0 20px 0;
 }
 
+@media screen and (max-width:500px) {
+  .formWrapper{
+    max-width:100%;
+    padding:20px;
+  }
+}
